[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gstatsim"
version = "0.0.1"
authors = [
	{name="(Emma) Mickey MacKie", email="emackie@ufl.edu"},
]
maintainers = [
	{name="(Emma) Mickey MacKie", email="emackie@ufl.edu"},
]
description = "testing GStatSim packaging"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy",
	"pandas",
	"scipy",
	"matplotlib",
	"tqdm",
	"scikit-learn",
	"earthpy",
	"scikit-gstat"
]

[project.urls]
"Homepage" = "https://github.com/GatorGlaciology/GStatSim"
"Bug Tracker" = "https://github.com/GatorGlaciology/GStatSim/issues"
